--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ EMAIL_PORT=587
 SECURE=false
 USER="schoolmanagement205@gmail.com"
 PASS="ndcfeseheqmbgmtj"
+TEACHERPRIVATEKEY="teacher"
+JWTSTUDENTKEY="student"
 # PASS="*verygoodmuhirwa#"
 
 
