--- a/.env
+++ b/.env
@@ -10,10 +10,12 @@ HOST="smtp.gmail.com"
 SERVICE=Gmail
 EMAIL_PORT=587
 SECURE=false
-USER="schoolmanagement205@gmail.com"
-PASS="ndcfeseheqmbgmtj"
+user="verygoodmuhirwa2@gmail.com"
+pass="ndcfeseheqmbgmtj"
+# pass= "*verygoodmuhirwa#"
 TEACHERPRIVATEKEY="teacher"
 JWTSTUDENTKEY="student"
 # PASS="*verygoodmuhirwa#"
+
 
 
